[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "gtoolz"
version = "0.0.1"
authors = [
  {name="Geoff McNamara", email="geoff.mcnamara@gmail.com"},
]
# exclude = [ "/docs/Makefile" ]
description="This package provides a multitude of functions or classes to manipulate data into ascii color tables or build dashboards"
readme="README.md"
requires-python=">=3.7"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

dependencies=[
  'requests',
  'pandas',
  'docopt']

[project.urls]
"Homepage"="https://github.com/geoffmcnamara/gtoolz"
"Bug Trakers"="https://github.com/geoffmcnamara/gtoolz/issues"

[tool.setuptools]
py-modules = []

[options]
package_dir="src"

[options.packages.find]
where="src"

